--- a/first/index.html
+++ b/first/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>re-learn</title>
+    <title>Re-learn</title>
 </head>
 <body>
     <h1>Holla</h1>
-    <p>My name Jada... I' here to learn</p>
+    <p>My name Jada... I'm here to learn</p>
     <script src="index.html"></script>
 </body>
 </html>
