--- a/first/index.html
+++ b/first/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Re-learn</title>
+    <title>Document</title>
 </head>
 <body>
     <h1>Holla</h1>
     <p>My name Jada... I'm here to learn</p>
-    <script src="index.html"></script>
+    <script src="index.js"></script>
 </body>
 </html>
