--- a/arrays/index.html
+++ b/arrays/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello world!!</h1>
+    <h4>Hello world!!</h4>
+    <p>fetching whatever I can from APIs using Javascript. Lets Gooooo!!!</p>
+
+    <h1>Users:</h1>
+    <ul>
+        
+    </ul>
     <script src="index.js"></script>
 </body>
 </html>
